--- a/01-02-linear-regression.ipynb
+++ b/01-02-linear-regression.ipynb
@@ -1,8 +1,195 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 선형 회귀(linear regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 회귀 분석(regression analysis)\n",
+    "종속 변수 $y$에 대한 독립 변수들의 **관계**를 찾는 것\n",
+    "\n",
+    "$$y = f_1(x_1) + f_2(x_2) + ... +  f_n(x_n)$$\n",
+    "\n",
+    "## 선형 회귀(linear regression)\n",
+    "종속 변수 $y$에 대한 독립 변수들($x_1, x_2, ..., x_n$)의 **선형 관계**를 찾는 것\n",
+    "\n",
+    "$$y = a_1 \\times x_1 + a_2 \\times x_2 + ... + a_n \\times x_n + b$$\n",
+    "\n",
+    "## 단순 선형 회귀(simple linear regression)\n",
+    "종속 변수 $y$에 대한 독립 변수 $x$의 선형 관계를 찾는 것: **독립 변수가 1개**\n",
+    "\n",
+    "# $$\n",
+    "    y = a \\times x + b\n",
+    "$$\n",
+    "\n",
+    "![회귀분석](https://upload.wikimedia.org/wikipedia/commons/b/be/Normdist_regression.png)\n",
+    "\n",
+    "다중 선형 회귀(multiple linear regression)도 **형렬(matrix)을 사용하면, 단순 선형 회귀로 표현할 수 있습니다.**\n",
+    "\n",
+    "$$y =\n",
+    "\\begin{pmatrix}\n",
+    "    a_1 &\n",
+    "    a_2 &\n",
+    "    \\cdots &\n",
+    "    a_n\n",
+    "\\end{pmatrix}\n",
+    "\\times\n",
+    "\\begin{pmatrix}\n",
+    "    x_1 \\\\\n",
+    "    x_2 \\\\\n",
+    "    \\vdots \\\\\n",
+    "    x_n\n",
+    "\\end{pmatrix}\n",
+    "+ b\n",
+    "$$\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# $$\n",
+    "    y = A \\bullet X + b\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "    A = \n",
+    "    \\begin{pmatrix}\n",
+    "        a_1 &\n",
+    "        a_2 &\n",
+    "        \\cdots &\n",
+    "        a_n\n",
+    "    \\end{pmatrix}\n",
+    "\\\\\n",
+    "    X =\n",
+    "    \\begin{pmatrix}\n",
+    "        x_1 \\\\\n",
+    "        x_2 \\\\\n",
+    "        \\vdots \\\\\n",
+    "        x_n\n",
+    "    \\end{pmatrix}\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 생각해 볼 문제\n",
+    "\n",
+    "**문제 1)** 다음의 경우에서, $x$가 4일 때, $y$의 값은 얼마입니까?\n",
+    "\n",
+    "|**$x$**|**$y$**|\n",
+    "|---|---|---|\n",
+    "|0|3|\n",
+    "|1|5|\n",
+    "|2|7|\n",
+    "|3|9|\n",
+    "|4|?|\n",
+    "\n",
+    "**문제 2)** 위의 관계를 선형 회귀식으로 나타낼 수 있습니까?\n",
+    "\n",
+    "**문제 3)** 다음의 경우에서, $x_1$, $x_2$가 각각 2, 4일 때, $y$의 값은 얼마입니까?\n",
+    "\n",
+    "|**$x_1$**|**$x_2$**|**$y$**|\n",
+    "|---|---|---|\n",
+    "|0|0|3\n",
+    "|0|1|6\n",
+    "|0|2|9\n",
+    "|0|3|12\n",
+    "|0|4|15\n",
+    "|1|0|5\n",
+    "|1|1|8\n",
+    "|1|2|11\n",
+    "|1|3|14\n",
+    "|1|4|17\n",
+    "|2|0|7\n",
+    "|2|1|10\n",
+    "|2|2|13\n",
+    "|2|3|16\n",
+    "|2|4|?\n",
+    "|3|0|9\n",
+    "|3|1|12\n",
+    "|3|2|15\n",
+    "|3|3|18\n",
+    "|3|4|21\n",
+    "\n",
+    "**문제 4)** 위의 관계를 선형 회귀식으로 나타낼 수 있습니까?\n",
+    "\n",
+    "**문제 5)** 아래와 같이 데이터가 부분적인 경우에도 값을 추정할 수 있을까요? (취소선으로 표시된 데이터가 누락되었다고 가정합니다.)\n",
+    "\n",
+    "|**$x_1$**|**$x_2$**|**$y$**|\n",
+    "|---|---|---|\n",
+    "|~~0~~|~~0~~|~~3~~\n",
+    "|0|1|6\n",
+    "|0|2|9\n",
+    "|~~0~~|3|12\n",
+    "|0|~~4~~|15\n",
+    "|1|0|5\n",
+    "|1|1|8\n",
+    "|1|~~2~~|11\n",
+    "|1|3|14\n",
+    "|~~1~~|~~4~~|~~17~~\n",
+    "|2|0|7\n",
+    "|2|~~1~~|10\n",
+    "|2|2|13\n",
+    "|~~2~~|3|16\n",
+    "|2|4|?\n",
+    "|3|0|9\n",
+    "|3|1|12\n",
+    "|~~3~~|~~2~~|~~15~~\n",
+    "|~~3~~|3|18\n",
+    "|3|4|21\n",
+    "\n",
+    "**문제 6)** 캠릿브지 대학의 연구결과에 따르면, 통계적으로 결혼 생활이 사람의 수명을 높인다고 합니다. 결혼 연령과 수명의 관계를 조사한 통계 데이터가 다음과 같다고 했을 때, 40세에 결혼할 경우 기대 수명은 얼마입니까? (\"NA\"는 미혼입니다.) \n",
+    "\n",
+    "|**결혼 연령**|**수명**|\n",
+    "|---|---|\n",
+    "|20|85|\n",
+    "|30|80|\n",
+    "|40|? |\n",
+    "|50|70|\n",
+    "|60|65|\n",
+    "|NA|60|\n",
+    "\n",
+    "**문제 7)** 위의 관계를 선형 회귀식으로 나타낼 수 있습니까? (\"결혼 연령\"을 $x$, \"기대 수명\"을 $y$로 표현하세요.)\n",
+    "\n",
+    "**문제 8)** 37세에 결혼했을 때 기대 수명은 얼마입니까?\n",
+    "\n",
+    "**문제 9)** 스포텐드 대학의 추가적인 연구결과에 따르면, 결혼 생활에서 상대 부모를 부양하는 경우에는 오히려 수명이 짧다고 합니다. 40세에 결혼하여 상대 부모를 부양하는 경우에 기대 수명은 얼마입니까? (\"상대 부모 부양 여부\"에서 \"0\"이 미부양, \"1\"이 부양입니다.)\n",
+    "\n",
+    "|**결혼 연령**|**상대 부모 부양 여부**|**수명**|\n",
+    "|---|---|\n",
+    "|20|0|85|\n",
+    "|20|1|40|\n",
+    "|30|0|80|\n",
+    "|30|1|45|\n",
+    "|40|0|75|\n",
+    "|40|1|? |\n",
+    "|50|0|70|\n",
+    "|50|1|55|\n",
+    "|60|0|65|\n",
+    "|60|1|60|\n",
+    "|NA|0|60|\n",
+    "\n",
+    "**문제 10)** 위의 관계를 선형 회귀식으로 나타낼 수 있습니까? (\"결혼 연령\"을 $x_1$, \"상대 부모 부양 여부\"를 $x_2$, \"기대 수명\"을 $y$로 표현하세요.) 나타낼 수 없다면 이유는 무엇일까요?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 아래는 수정중입니다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +202,7 @@
     "\n",
     "for i in range(num_points):\n",
     "    x1 = np.random.normal(1.0, 0.5)\n",
-    "    y1 = x1 * 2.0 + 3.0 + np.random.normal(0.0, 0.05)\n",
+    "    y1 = x1 * 2.0 + 3.0 + np.random.normal(0.0, 0.5)\n",
     "    vectors_set.append([x1, y1])\n",
     "    \n",
     "x_data = [v[0] for v in vectors_set]\n",
@@ -24,33 +211,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.8472937303883652, 0.42438248548001667, 1.5597211311717127, 0.847383671810334, 1.1117941062528631, 1.3981406194991113, 1.6931555195653636, 0.6520856158283105, 0.01700427195697307, 1.7317616478974138]\n",
-      "[4.761769078831399, 3.9257785116402717, 6.2296647251904265, 4.656769473199191, 5.167304241759955, 5.730329874105163, 6.3717382133349485, 4.282093510570824, 3.0272863675434745, 6.484094357792218]\n"
+      "[-0.0651080794209824, 0.7628897967762729, 1.7317701658236464, 1.168581841932256, 0.6440546971823045, 2.158905607648704, 0.9227004945599168, 1.1860552969179474, 0.2198894705479243, 0.8230699813642253]\n",
+      "[2.537997352355106, 4.094203789715634, 5.71457800446918, 4.930092967423108, 4.006194992513429, 7.21936143704344, 3.9094300962827986, 5.834437046210534, 3.4147230549844703, 5.491847152633533]\n",
+      "[[-0.0651080794209824, 2.537997352355106], [0.7628897967762729, 4.094203789715634], [1.7317701658236464, 5.71457800446918], [1.168581841932256, 4.930092967423108], [0.6440546971823045, 4.006194992513429], [2.158905607648704, 7.21936143704344], [0.9227004945599168, 3.9094300962827986], [1.1860552969179474, 5.834437046210534], [0.2198894705479243, 3.4147230549844703], [0.8230699813642253, 5.491847152633533]]\n"
      ]
     }
    ],
    "source": [
     "print(x_data)\n",
-    "print(y_data)"
+    "print(y_data)\n",
+    "print(vectors_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAENNJREFUeJzt3W+MZXV9x/H3Z11IOtSK6Y5KWGaHGmpbU1GcIiohqIkt\nSCRNeEA6lkiaTLDU+KTxTzehD5pN2mf+IWU7odoQx/KACqVmpbExVBKL7SwgoNhmi8yyWwwjbZfC\nmJCVbx/cyzI7zO49M3vv3Dvnvl/J5N7zO4d7PwtzPnv4ze/MTVUhSWqXHcMOIEnqP8tdklrIcpek\nFrLcJamFLHdJaiHLXZJayHKXpBay3CWphSx3SWqhncN64127dtX09PSw3l6StqWDBw/+tKomex03\ntHKfnp5mcXFxWG8vSdtSkqUmxzktI0ktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S9JWWViA6WnYsaPz\nuLAwsLca2lJISRorCwswNwcrK53tpaXONsDsbN/fzit3SdoKe/e+WuyvWFnpjA+A5S5JW+Hw4Y2N\nnyHLXZK2wtTUxsbPkOUuSVth3z6YmDh5bGKiMz4AlrskbYXZWZifhz17IOk8zs8P5Iep4GoZSdo6\ns7MDK/O1vHKXpBay3CWphSx3SWohy12SWshyl6QWstwlqYUalXuSc5PcleRHSZ5I8t41+69McizJ\nI92vWwYTV5LURNN17l8A7quq65KcDUysc8wDVXVN/6JJkjarZ7kneQNwBfBxgKp6CXhpsLEkSWei\nybTMhcAy8JUkDye5Pck56xz3viSPJvlmkrev90JJ5pIsJllcXl4+k9ySpNNoUu47gUuA26rqXcCL\nwGfXHPMQMFVV7wC+BNyz3gtV1XxVzVTVzOTk5BnEliSdTpNyPwIcqarvdbfvolP2J1TV81X1Qvf5\nAeCsJLv6mlSS1FjPcq+qnwBPJ3lbd+hDwA9XH5PkLUnSfX5p93Wf63NWSVJDTVfLfBJY6K6UeRK4\nMclNAFW1H7gO+ESS48DPgOurqgYRWJLUW4bVwTMzM7W4uDiU95ak7SrJwaqa6XWcd6hKUgtZ7pLU\nQpa7JLWQ5S5JLWS5S1ILWe6S1EKWuyS1kOUuSS1kuUtSC1nuktRClrsktZDlLkktZLlLUgtZ7pLU\nQpa7JLWQ5S5JLWS5SxodCwswPQ07dnQeFxaGnWjbavoxe5I0WAsLMDcHKyud7aWlzjbA7Ozwcm1T\nXrlLGg17975a7K9YWemMa8Msd0mj4fDhjY3rtCx3SaNhampj4zoty13SaNi3DyYmTh6bmOiMa8Ms\nd0mjYXYW5udhzx5IOo/z8/4wdZNcLSNpdMzOWuZ90ujKPcm5Se5K8qMkTyR575r9SfLFJIeSPJrk\nksHElSQ10fTK/QvAfVV1XZKzgTUTY1wFXNT9eg9wW/dRkjQEPa/ck7wBuAL4a4Cqeqmq/nfNYdcC\nd1THg8C5Sc7re1pJUiNNpmUuBJaBryR5OMntSc5Zc8z5wNOrto90xyRJQ9Ck3HcClwC3VdW7gBeB\nz27mzZLMJVlMsri8vLyZl5AkNdCk3I8AR6rqe93tu+iU/WpHgQtWbe/ujp2kquaraqaqZiYnJzeT\nV5LUQM9yr6qfAE8neVt36EPAD9ccdi9wQ3fVzGXAsap6pr9RJUlNNV0t80lgobtS5kngxiQ3AVTV\nfuAAcDVwCFgBbhxAVklSQ43KvaoeAWbWDO9ftb+Am/uYS5J0Bvz1A5LUQpa7JLWQ5S5JLWS5S1IL\nWe6S1EKWuyS1kOUuSS1kuUtSC1nuktRClrsktZDlLkktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S1IL\nWe6S1EKWuyS1kOUuSS1kuUtSC1nuktRClrvUbwsLMD0NO3Z0HhcWhp1IY2jnsANIrbKwAHNzsLLS\n2V5a6mwDzM4OL5fGjlfuUj/t3ftqsb9iZaUzLm0hy13qp8OHNzYuDUijck/yVJLHkjySZHGd/Vcm\nOdbd/0iSW/ofVdoGpqY2Ni4NyEbm3D9QVT89zf4HquqaMw0kbWv79p085w4wMdEZl7aQ0zJSP83O\nwvw87NkDSedxft4fpmrLpap6H5T8GDgG/Bz4q6qaX7P/SuDrwBHgKPDHVfWDdV5nDpgDmJqaevfS\n0tKZ5peksZLkYFXN9Dqu6bTM5VV1NMmbgG8l+VFVfWfV/oeAqap6IcnVwD3ARWtfpPuXwjzAzMxM\n779VJEmb0mhapqqOdh+fBe4GLl2z//mqeqH7/ABwVpJdfc4qSWqoZ7knOSfJ6195DnwYeHzNMW9J\nku7zS7uv+1z/40qSmmgyLfNm4O5ud+8EvlZV9yW5CaCq9gPXAZ9Ichz4GXB9NZnMlyQNRM9yr6on\ngYvXGd+/6vmtwK39jSZJ2iyXQkpSC1nuktRClrsktZDlLkktZLlLUgtZ7pLUQpa7xosfgacx4cfs\naXz4EXgaI165a3z4EXgaI5a7xocfgacxYrlrfPgReBojlrvGx759nY+8W82PwFNLWe4aH34EnsaI\nq2U0XmZnLXONBa/cNX5c664x4JW7xotr3TUmvHLXeHGtu8aE5a7x4lp3jQnLXePFte4aE5a7xotr\n3TUmLHeNF9e6a0y4Wkbjx7XuGgNeuUtSC1nuahdvUJKAhtMySZ4C/g/4OXC8qmbW7A/wBeBqYAX4\neFU91N+oUg/eoCSdsJEr9w9U1TvXFnvXVcBF3a854LZ+hJM2xBuUpBP6NS1zLXBHdTwInJvkvD69\nttSMNyhJJzQt9wL+KcnBJHPr7D8feHrV9pHumLR1vEFJOqFpuV9eVe+kM/1yc5IrNvNmSeaSLCZZ\nXF5e3sxLSKfmDUrSCY3KvaqOdh+fBe4GLl1zyFHgglXbu7tja19nvqpmqmpmcnJyc4mlU/EGJemE\nnuWe5Jwkr3/lOfBh4PE1h90L3JCOy4BjVfVM39NKvczOwlNPwcsvdx4tdo2pJksh3wzc3VntyE7g\na1V1X5KbAKpqP3CAzjLIQ3SWQt44mLiSpCZ6XrlX1ZNVdXH36+1Vta87vr9b7HRXydxcVW+tqt+s\nqsVBB1dLeNORNBD+bhkNjzcdSQPjrx/Q8HjTkTQwlrsGp9eUizcdSQNjuWswXplyWVqCqlenXFYX\nvDcdSQNjuWswmky5eNORNDCWuwajyZSLNx1JA+NqGQ3G1FRnKma98dX8VCRpILxy12A45SINleWu\nwXDKRRoqp2U0OE65SEPjlbsktZDlLkktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S1ILWe6S1EKWuyS1\nkOUuSS1kuUtSC1nuktRClrsktZDlLkktZLlLUgs1Lvckr0vycJJvrLPvyiTHkjzS/bqlvzElSRux\nkQ/r+BTwBPBLp9j/QFVdc+aRJElnqtGVe5LdwEeA2wcbR5LUD02nZT4PfBp4+TTHvC/Jo0m+meTt\n6x2QZC7JYpLF5eXljWaVJDXUs9yTXAM8W1UHT3PYQ8BUVb0D+BJwz3oHVdV8Vc1U1czk5OSmAmuN\nhQWYnoYdOzqPCwvDTiRpBDS5cn8/8NEkTwF3Ah9M8tXVB1TV81X1Qvf5AeCsJLv6HVZrLCzA3Bws\nLUFV53FuzoKX1Lvcq+pzVbW7qqaB64FvV9XHVh+T5C1J0n1+afd1nxtAXq22dy+srJw8trLSGZc0\n1jayWuYkSW4CqKr9wHXAJ5IcB34GXF9V1Z+IOqXDhzc2LmlsbKjcq+p+4P7u8/2rxm8Fbu1nMDUw\nNdWZillvXNJY8w7V7WzfPpiYOHlsYqIzLmmsWe7b2ewszM/Dnj2QdB7n5zvjksbapufcNSJmZy1z\nSa/hlbsktZDlLkktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S1ILWe6S1EKWuyS1kOUuSS1kuUtSC1nu\nktRClrsktZDlLkktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S1ILWe6S1EKWuyS1UONyT/K6JA8n+cY6\n+5Lki0kOJXk0ySX9jSlJ2oiNXLl/CnjiFPuuAi7qfs0Bt51hLknSGWhU7kl2Ax8Bbj/FIdcCd1TH\ng8C5Sc7rU0ZJ0gY1vXL/PPBp4OVT7D8feHrV9pHumCRpCHqWe5JrgGer6uCZvlmSuSSLSRaXl5fP\n9OUkSafQ5Mr9/cBHkzwF3Al8MMlX1xxzFLhg1fbu7thJqmq+qmaqamZycnKTkSVJvfQs96r6XFXt\nrqpp4Hrg21X1sTWH3Qvc0F01cxlwrKqe6X9cSVITOzf7Dya5CaCq9gMHgKuBQ8AKcGNf0kmSNmVD\n5V5V9wP3d5/vXzVewM39DCZJ2jzvUJWkFrLcJamFLHdJaiHLXZJayHKXpBay3CWphSx3SWohy12S\nWmh7lfvCAkxPw44dnceFhWEnkqSRtOlfP7DlFhZgbg5WVjrbS0udbYDZ2eHlkqQRtH2u3PfufbXY\nX7Gy0hmXJJ1k+5T74cMbG5ekMbZ9yn1qamPjkjTGtk+579sHExMnj01MdMYlSSfZPuU+Owvz87Bn\nDySdx/l5f5gqSevYPqtloFPklrkk9bR9rtwlSY1Z7pLUQpa7JLWQ5S5JLWS5S1ILpaqG88bJMrDU\nh5faBfy0D68zaObsL3P2lzn7a5A591TVZK+Dhlbu/ZJksapmhp2jF3P2lzn7y5z9NQo5nZaRpBay\n3CWphdpQ7vPDDtCQOfvLnP1lzv4aes5tP+cuSXqtNly5S5LW2BblnuR3kvx7kkNJPnua434ryfEk\n121lvlXv3zNnkiuTPJLkB0n+easzdjOcNmeSNyT5hyTf7+a8cUg5v5zk2SSPn2J/knyx++d4NMkl\nW52xm6NXztluvseSfDfJxVudsZvjtDlXHTfs86hnzhE5j3r9dx/ueVRVI/0FvA74T+BXgLOB7wO/\ncYrjvg0cAK4bxZzAucAPganu9ptGNOefAH/RfT4J/Ddw9hCyXgFcAjx+iv1XA98EAlwGfG+rMzbM\n+T7gjd3nV41qzlXfH0M7jxr++xz6edQw51DPo+1w5X4pcKiqnqyql4A7gWvXOe6TwN8Bz25luFWa\n5Pw94OtVdRigqoaRtUnOAl6fJMAv0vmmPL61MaGqvtN971O5FrijOh4Ezk1y3take1WvnFX13ar6\nn+7mg8DuLQn22hy9/n3C8M+jJjlH4TxqknOo59F2KPfzgadXbR/pjp2Q5Hzgd4HbtjDXWj1zAr8K\nvDHJ/UkOJrlhy9K9qknOW4FfB/4LeAz4VFW9vDXxNqTJn2XU/AGd/9sYOSNyHjUxCudRE0M9j7bX\nh3Wc2ueBz1TVy52/JEfWTuDdwIeAXwD+JcmDVfUfw431Gr8NPAJ8EHgr8K0kD1TV88ONtb0l+QCd\ncr982FlOwfOov4Z6Hm2Hcj8KXLBqe3d3bLUZ4M7uN+Qu4Ookx6vqnq2JCDTLeQR4rqpeBF5M8h3g\nYmArvymb5LwR+PPqTBYeSvJj4NeAf92aiI01+bOMhCTvAG4Hrqqq54ad5xRG4TxqYhTOoyaGeh5t\nh2mZfwMuSnJhkrOB64F7Vx9QVRdW1XRVTQN3AX84hG/InjmBvwcuT7IzyQTwHuCJEcx5mM5VEUne\nDLwNeHJLUzZzL3BDd9XMZcCxqnpm2KHWSjIFfB34/RG8ujxhRM6jJkbhPGpiqOfRyF+5V9XxJH8E\n/COdn+R/uap+kOSm7v79Qw3Y1SRnVT2R5D7gUeBl4PaqOu2ytGHkBP4M+Jskj9FZifKZqtry38SX\n5G+BK4FdSY4AfwqctSrnATorZg4BK3SulLZcg5y3AL8M/GX3qvh4DeGXSjXIORJ65RyF86hJToZ8\nHnmHqiS10HaYlpEkbZDlLkktZLlLUgtZ7pLUQpa7JLWQ5S5JLWS5S1ILWe6S1EL/D22CN5P7uuhF\nAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADOBJREFUeJzt3VuIJGcZxvHnmd0N2jEYcBsNxplWCIKKJrFZPBE8oGgU\n9cKLlVYxN42iEi+8UAcULwbvBL1RGg8otgkajUhIFMWIeGF0Nlk1R4lhe9wQzcRDkrXFEH29qB42\nMzuzXZ3p6q53+v+Dobq+/uh559vi4duvqrocEQIA5LE07wIAAJMhuAEgGYIbAJIhuAEgGYIbAJIh\nuAEgGYIbAJIhuAEgGYIbAJI5XMWHHj16NFqtVhUfDQAH0okTJx6JiGaZvpUEd6vV0vr6ehUfDQAH\nku1B2b4slQBAMgQ3ACRDcANAMgQ3ACRDcANAMgQ3AOxXvy+1WtLSUrHt9yv9dZVcDggAC6Pfl7pd\naTgs9geDYl+SOp1KfiUzbgDYj9XVs6G9ZTgs2itCcAPAfmxsTNY+BQQ3AOzH8vJk7VNAcAPAfqyt\nSY3G9rZGo2ivCMENAPvR6Ui9nrSyItnFtter7MSkxFUlALB/nU6lQb0TM24ASGZscNt+se2TT/l5\nzPbHZ1EcAOBcY5dKIuI+SZdLku1Dkh6UdGPFdQEA9jDpUsmbJP0pIkp/4TcAYLomDe7jkq6rohAA\nQDmlg9v2BZLeKel7e7zftb1ue31zc3Na9QEAdphkxv02SbdHxF93ezMiehHRjoh2s1nqeZcAgKdh\nkuB+r1gmAYC5KxXcti+U9GZJP6i2HADAOKXunIyIf0l6TsW1AABK4M5JAEiG4AaAZAhuAEiG4AaA\nZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhu\nAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG\n4AaAZAhuAEiG4AaAZAhuAEimVHDbvtj2DbbvtX2P7VdXXRgAYHeHS/b7oqQfR8R7bF8gqVFhTQCA\n8xgb3LafLekqSR+UpIh4QtIT1ZYFANhLmaWSF0ralPQN23fY/qrtCyuuCwCwhzLBfVjSlZK+HBFX\nSPqXpE/u7GS7a3vd9vrm5uaUywQAbCkT3KclnY6I20b7N6gI8m0iohcR7YhoN5vNadYIAHiKscEd\nEX+R9GfbLx41vUnS3ZVWBQDYU9mrSj4mqT+6ouQBSddUVxIA4HxKXccdESdHyyAvj4h3R8Q/qi4M\nqK1+X2q1pKWlYtvvz7siLJiyM24AUhHS3a40HBb7g0GxL0mdzvzqwkLhlndgEqurZ0N7y3BYtAMz\nQnADk9jYmKwdqADBDUxieXmydqACBDcwibU1qbHjq3oajaId5+JEbiUIbmASnY7U60krK5JdbHs9\nTkzuZutE7mAgRZw9kUt475sjYuof2m63Y319feqfCyCRVqsI651WVqRTp2ZdTe3ZPhER7TJ9mXED\nqAYncitDcAOoBidyK0NwA6gGJ3IrQ3ADqAYncivDLe8AqtPpENQVYMYNAMkQ3JgdbsYApoKlEswG\n36oHTA0zbswG36oHTA3BjdngZgxgaghuzAY3YwBTQ3BjNrgZA5gaghuzwc0YwNRwVQlmh5sxgKlg\nxg0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJBMqS+Z\nsn1K0uOS/ivpyYhoV1kUAGBvk3w74Bsi4pHKKgEAlMJSCQAkUza4Q9LPbJ+w3a2yIADA+ZUN7tdF\nxOWS3ibpI7av2tnBdtf2uu31zc3NqRYJ1EK/L7Va0tJSse33510RFlSp4I6IB0fbhyXdKOnYLn16\nEdGOiHaz2ZxulcC89ftStysNBlJEse12CW/Mxdjgtn2h7Yu2Xkt6i6Q7qy4MqJXVVWk43N42HBbt\nwIyVuarkuZJutL3V/zsR8eNKqwLqZmNjsnagQmODOyIekPSKGdQC1NfycrE8sls7MGNcDgiUsbYm\nNRrb2xqNoh2YMYIbKKPTkXo9aWVFsottr1e0AzM2yZ2TwGLrdAhq1AIzbgBIhuAGgGQIbgBIhuAG\ngGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQI\nbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuDG9PT7Uqsl\nLS0V235/3hUBB9LheReAA6Lfl7pdaTgs9geDYl+SOp351QUcQMy4MR2rq2dDe8twWLQDmCqCG9Ox\nsTFZO4CnrXRw2z5k+w7bN1VZEOZoP2vUy8uTtQN42iaZcV8r6Z6qCsGcba1RDwZSxNk16rLhvbYm\nNRrb2xqNoh3AVJUKbtuXSnq7pK9WWw7mZr9r1J2O1OtJKyuSXWx7PU5MAhVwRIzvZN8g6fOSLpL0\niYh4xy59upK6krS8vPzKwWAw5VJRqaWlYqa9ky3973+zrwdYMLZPRES7TN+xM27b75D0cEScOF+/\niOhFRDsi2s1ms2SpqI06r1FzfTiwTZmlktdKeqftU5Kul/RG29+utCrMXl3XqPe79g4cQGODOyI+\nFRGXRkRL0nFJP4+I91VeGWarrmvUXB8OnIM7J3FWpzP/oN6J68OBc0x0A05E/GK3E5NAZeq89g7M\nCXdOot7quvYOzBHBjXqr69o7MEescaP+6rj2DswRM24ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBk\nCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgLoOH1QKoEb7WdZyth9VuPfdw62G1El81\nCmAumHGPw8NqAdQMwT0OD6sFUDME9zg8rBZAzRDc4/CwWgA1Q3CPw8NqAdQMV5WUwcNqAdQIM24A\nSIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASGZscNt+hu3f2P6d7btsf24WhQEA\ndlfmlvf/SHpjRJyxfUTSr2zfEhG/rrg2AMAuxgZ3RISkM6PdI6OfqLIoAMDeSq1x2z5k+6SkhyX9\nNCJu26VP1/a67fXNzc1p1wkAGCkV3BHx34i4XNKlko7ZftkufXoR0Y6IdrPZnHadAICRia4qiYh/\nSrpV0lurKQcAME6Zq0qati8evX6mpDdLurfqwgAAuytzVcklkr5p+5CKoP9uRNxUbVkAgL2Uuark\n95KumEEtAIASuHMSAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIb\nAJKpT3D3+1KrJS0tFdt+f94VAUAtlfl2wOr1+1K3Kw2Hxf5gUOxLUqczv7oAoIbqMeNeXT0b2luG\nw6IdALBNPYJ7Y2OydgBYYPUI7uXlydoBYIHVI7jX1qRGY3tbo1G0AwC2qUdwdzpSryetrEh2se31\nODEJALuox1UlUhHSBDUAjFWPGTcAoDSCGwCSIbgBIBmCGwCSIbgBIBlHxPQ/1N6UNJj6B591VNIj\nFX5+NozHuRiT7RiP7eo4HisR0SzTsZLgrprt9Yhoz7uOumA8zsWYbMd4bJd9PFgqAYBkCG4ASCZr\ncPfmXUDNMB7nYky2Yzy2Sz0eKde4AWCRZZ1xA8DCqm1w236r7fts32/7k7u8b9tfGr3/e9tXzqPO\nWSoxJq+3/ajtk6Ofz8yjzlmx/XXbD9u+c4/3F+oYKTEei3Z8vMD2rbbvtn2X7Wt36ZPzGImI2v1I\nOiTpT5JeJOkCSb+T9JIdfa6WdIskS3qVpNvmXXcNxuT1km6ad60zHJOrJF0p6c493l+0Y2TceCza\n8XGJpCtHry+S9MeDkiN1nXEfk3R/RDwQEU9Iul7Su3b0eZekb0Xh15Iutn3JrAudoTJjslAi4peS\n/n6eLgt1jJQYj4USEQ9FxO2j149LukfS83d0S3mM1DW4ny/pz0/ZP61zB7xMn4Ok7N/7mtF/+W6x\n/dLZlFZbi3aMlLGQx4ftlqQrJN22462Ux0h9HqSAabhd0nJEnLF9taQfSrpszjWhPhby+LD9LEnf\nl/TxiHhs3vVMQ11n3A9KesFT9i8dtU3a5yAZ+/dGxGMRcWb0+mZJR2wfnV2JtbNox8h5LeLxYfuI\nitDuR8QPdumS8hipa3D/VtJltl9o+wJJxyX9aEefH0n6wOis8KskPRoRD8260BkaOya2n2fbo9fH\nVPz7/m3mldbHoh0j57Vox8fob/2apHsi4gt7dEt5jNRyqSQinrT9UUk/UXE1xdcj4i7bHxq9/xVJ\nN6s4I3y/pKGka+ZV7yyUHJP3SPqw7Scl/VvS8RidOj+IbF+n4kqJo7ZPS/qspCPSYh4jJcZjoY4P\nSa+V9H5Jf7B9ctT2aUnLUu5jhDsnASCZui6VAAD2QHADQDIENwAkQ3ADQDIENwAkQ3ADQDIENwAk\nQ3ADQDL/B4GCafl34wjwAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f98759379b0>"
+       "<matplotlib.figure.Figure at 0x7f6f6a508d68>"
       ]
      },
      "metadata": {},
@@ -62,10 +251,18 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "plt.plot?\n",
-    "plt.plot(x_data, y_data, 'ro')\n",
+    "plt.plot(x_data, y_data, 'or')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
