--- a/01-02-linear-regression.ipynb
+++ b/01-02-linear-regression.ipynb
@@ -24,9 +24,7 @@
     "## 단순 선형 회귀(simple linear regression)\n",
     "종속 변수 $y$에 대한 독립 변수 $x$의 선형 관계를 찾는 것: **독립 변수가 1개**\n",
     "\n",
-    "# $$\n",
-    "    y = a \\times x + b\n",
-    "$$\n",
+    "# $$ y = a \\times x + b $$\n",
     "\n",
     "![회귀분석](https://upload.wikimedia.org/wikipedia/commons/b/be/Normdist_regression.png)\n",
     "\n",
@@ -51,9 +49,7 @@
     "\n",
     "***\n",
     "\n",
-    "# $$\n",
-    "    y = A \\bullet X + b\n",
-    "$$\n",
+    "# $$ y = A \\bullet X + b $$\n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
