--- a/01-02-linear-regression.ipynb
+++ b/01-02-linear-regression.ipynb
@@ -52,6 +52,7 @@
     "# $$ y = A \\bullet X + b $$\n",
     "\n",
     "$$\n",
+    "when\n",
     "\\begin{cases}\n",
     "    A = \n",
     "    \\begin{pmatrix}\n",
