Linear regression - coding

--- a/01-02-linear-regression.ipynb
+++ b/01-02-linear-regression.ipynb
@@ -179,62 +179,277 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 아래는 수정중입니다."
+    "# 실습\n",
+    "\n",
+    "\"**문제 1**\"을 프로그램으로 풀어봅니다.\n",
+    "\n",
+    "|**$x$**|**$y$**|\n",
+    "|---|---|---|\n",
+    "|0|3|\n",
+    "|1|5|\n",
+    "|2|7|\n",
+    "|3|9|\n",
+    "|4|?|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "num_points = 10\n",
-    "vectors_set = []\n",
-    "\n",
-    "for i in range(num_points):\n",
-    "    x1 = np.random.normal(1.0, 0.5)\n",
-    "    y1 = x1 * 2.0 + 3.0 + np.random.normal(0.0, 0.5)\n",
-    "    vectors_set.append([x1, y1])\n",
-    "    \n",
-    "x_data = [v[0] for v in vectors_set]\n",
-    "y_data = [v[1] for v in vectors_set]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.0651080794209824, 0.7628897967762729, 1.7317701658236464, 1.168581841932256, 0.6440546971823045, 2.158905607648704, 0.9227004945599168, 1.1860552969179474, 0.2198894705479243, 0.8230699813642253]\n",
-      "[2.537997352355106, 4.094203789715634, 5.71457800446918, 4.930092967423108, 4.006194992513429, 7.21936143704344, 3.9094300962827986, 5.834437046210534, 3.4147230549844703, 5.491847152633533]\n",
-      "[[-0.0651080794209824, 2.537997352355106], [0.7628897967762729, 4.094203789715634], [1.7317701658236464, 5.71457800446918], [1.168581841932256, 4.930092967423108], [0.6440546971823045, 4.006194992513429], [2.158905607648704, 7.21936143704344], [0.9227004945599168, 3.9094300962827986], [1.1860552969179474, 5.834437046210534], [0.2198894705479243, 3.4147230549844703], [0.8230699813642253, 5.491847152633533]]\n"
+      "('W', 0)\n",
+      "('b', 0)\n",
+      "('loss', 164)\n"
      ]
     }
    ],
    "source": [
-    "print(x_data)\n",
-    "print(y_data)\n",
-    "print(vectors_set)"
+    "import tensorflow as tf\n",
+    "\n",
+    "# 아래 값들을 조정해서 'loss'를 최소화하세요.\n",
+    "# 지금은 'W', 'b' 값 모두 '0'입니다.\n",
+    "W = tf.Variable(0)\n",
+    "b = tf.Variable(0)\n",
+    "\n",
+    "x = [0, 1, 2, 3]\n",
+    "y = [3, 5, 7, 9]\n",
+    "\n",
+    "linear_model = W * x + b\n",
+    "loss = tf.reduce_sum(tf.square(linear_model - y))\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "\n",
+    "print(\"W\", sess.run(W))\n",
+    "print(\"b\", sess.run(b))\n",
+    "print(\"loss\", sess.run(loss))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('W', 2.0056281)\n",
+      "('b', 2.9879839)\n",
+      "('loss', 0.00020946858)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "W = tf.Variable(0.1, dtype=tf.float32)\n",
+    "b = tf.Variable(0.3, dtype=tf.float32)\n",
+    "\n",
+    "x = [0, 1, 2, 3]\n",
+    "y = [3, 5, 7, 9]\n",
+    "\n",
+    "linear_model = W * x + b\n",
+    "loss = tf.reduce_sum(tf.square(linear_model - y))\n",
+    "\n",
+    "# learning rate 값을 조정해보세요.\n",
+    "# 현재는 '0.01'로 되어있습니다.\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "train = optimizer.minimize(loss)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "\n",
+    "# epoch을 조정해보세요.\n",
+    "# 현재는 '200'으로 되어있습니다.\n",
+    "for i in range(200):\n",
+    "    sess.run(train)\n",
+    "\n",
+    "print(\"W\", sess.run(W))\n",
+    "print(\"b\", sess.run(b))\n",
+    "print(\"loss\", sess.run(loss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('W', 2.0056281)\n",
+      "('b', 2.9879839)\n",
+      "('loss', 0.00020946858)\n",
+      "('y', 11.010496)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "W = tf.Variable(0.1, dtype=tf.float32)\n",
+    "b = tf.Variable(0.3, dtype=tf.float32)\n",
+    "\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "y = tf.placeholder(tf.float32)\n",
+    "\n",
+    "x_data = [0, 1, 2, 3]\n",
+    "y_data = [3, 5, 7, 9]\n",
+    "\n",
+    "linear_model = W * x + b\n",
+    "loss = tf.reduce_sum(tf.square(linear_model - y))\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "train = optimizer.minimize(loss)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "\n",
+    "for i in range(200):\n",
+    "    sess.run(train, feed_dict={x: x_data, y: y_data})\n",
+    "\n",
+    "print(\"W\", sess.run(W, feed_dict={x: x_data, y: y_data}))\n",
+    "print(\"b\", sess.run(b, feed_dict={x: x_data, y: y_data}))\n",
+    "print(\"loss\", sess.run(loss, feed_dict={x: x_data, y: y_data}))\n",
+    "\n",
+    "# 'x'에 다른 값도 넣어보세요.\n",
+    "# 현재는 '4'를 넣었습니다.\n",
+    "print(\"y\", sess.run(linear_model, feed_dict={x: 4}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**문제 3)**을 프로그램으로 풀어봅니다.\n",
+    "\n",
+    "|**$x_1$**|**$x_2$**|**$y$**|\n",
+    "|---|---|---|\n",
+    "|0|0|3\n",
+    "|0|1|6\n",
+    "|0|2|9\n",
+    "|0|3|12\n",
+    "|0|4|15\n",
+    "|1|0|5\n",
+    "|1|1|8\n",
+    "|1|2|11\n",
+    "|1|3|14\n",
+    "|1|4|17\n",
+    "|2|0|7\n",
+    "|2|1|10\n",
+    "|2|2|13\n",
+    "|2|3|16\n",
+    "|2|4|?\n",
+    "|3|0|9\n",
+    "|3|1|12\n",
+    "|3|2|15\n",
+    "|3|3|18\n",
+    "|3|4|21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('W', array([[ 2.00000334],\n",
+      "       [ 3.00000072]], dtype=float32))\n",
+      "('b', array([ 2.99999666], dtype=float32))\n",
+      "('loss', 3.7516656e-11)\n",
+      "('y', array([[ 19.00000572]], dtype=float32))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "W = tf.Variable(tf.zeros([2, 1]))\n",
+    "b = tf.Variable(tf.zeros([1]))\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, [None, 2])\n",
+    "y = tf.placeholder(tf.float32, [None, 1])\n",
+    "\n",
+    "x_data = [[0, 0], [0, 1], [0, 2], [0, 3], [0, 4], \n",
+    "          [1, 0], [1, 1], [1, 2], [1, 3], [1, 4]]\n",
+    "y_data = [[3], [6], [9], [12], [15], [5], [8], [11], [14], [17]]\n",
+    "\n",
+    "# 'W * x'가 이니라, 'x * W'입니다!\n",
+    "linear_model = tf.matmul(x, W) + b\n",
+    "loss = tf.reduce_sum(tf.square(linear_model - y))\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "train = optimizer.minimize(loss)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)\n",
+    "\n",
+    "for i in range(1000):\n",
+    "    sess.run(train, feed_dict={x: x_data, y: y_data})\n",
+    "\n",
+    "print(\"W\", sess.run(W, feed_dict={x: x_data, y: y_data}))\n",
+    "print(\"b\", sess.run(b, feed_dict={x: x_data, y: y_data}))\n",
+    "print(\"loss\", sess.run(loss, feed_dict={x: x_data, y: y_data}))\n",
+    "\n",
+    "# 'x' 값을 다른 것으로 바꿔보세요.\n",
+    "# 현재는 [[2, 4]] 값으로 되어있습니다.\n",
+    "print(\"y\", sess.run(linear_model, feed_dict={x: [[2, 4]]}))\n",
+    "\n",
+    "# 그리고, 여러 'x' 값에 대한 결과를 한 번에 예측하려면 어떻게 해야할까요?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다음을 프로그램으로 풀어봅니다.\n",
+    "\n",
+    "|**$x_1$**|**$x_2$**|**$x_3$**|**$y$**|\n",
+    "|---|---|---|---|\n",
+    "|0|0|0|3\n",
+    "|0|0|1|4\n",
+    "|0|1|0|6\n",
+    "|0|1|1|7\n",
+    "|0|2|0|9\n",
+    "|0|2|1|10\n",
+    "|1|0|0|5\n",
+    "|1|0|1|6\n",
+    "|1|1|0|8\n",
+    "|1|1|1|9\n",
+    "|1|2|0|11\n",
+    "|1|2|1|12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 그래프 그리기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADOBJREFUeJzt3VuIJGcZxvHnmd0N2jEYcBsNxplWCIKKJrFZPBE8oGgU\n9cKLlVYxN42iEi+8UAcULwbvBL1RGg8otgkajUhIFMWIeGF0Nlk1R4lhe9wQzcRDkrXFEH29qB42\nMzuzXZ3p6q53+v+Dobq+/uh559vi4duvqrocEQIA5LE07wIAAJMhuAEgGYIbAJIhuAEgGYIbAJIh\nuAEgGYIbAJIhuAEgGYIbAJI5XMWHHj16NFqtVhUfDQAH0okTJx6JiGaZvpUEd6vV0vr6ehUfDQAH\nku1B2b4slQBAMgQ3ACRDcANAMgQ3ACRDcANAMgQ3AOxXvy+1WtLSUrHt9yv9dZVcDggAC6Pfl7pd\naTgs9geDYl+SOp1KfiUzbgDYj9XVs6G9ZTgs2itCcAPAfmxsTNY+BQQ3AOzH8vJk7VNAcAPAfqyt\nSY3G9rZGo2ivCMENAPvR6Ui9nrSyItnFtter7MSkxFUlALB/nU6lQb0TM24ASGZscNt+se2TT/l5\nzPbHZ1EcAOBcY5dKIuI+SZdLku1Dkh6UdGPFdQEA9jDpUsmbJP0pIkp/4TcAYLomDe7jkq6rohAA\nQDmlg9v2BZLeKel7e7zftb1ue31zc3Na9QEAdphkxv02SbdHxF93ezMiehHRjoh2s1nqeZcAgKdh\nkuB+r1gmAYC5KxXcti+U9GZJP6i2HADAOKXunIyIf0l6TsW1AABK4M5JAEiG4AaAZAhuAEiG4AaA\nZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhu\nAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG4AaAZAhuAEiG\n4AaAZAhuAEiG4AaAZAhuAEimVHDbvtj2DbbvtX2P7VdXXRgAYHeHS/b7oqQfR8R7bF8gqVFhTQCA\n8xgb3LafLekqSR+UpIh4QtIT1ZYFANhLmaWSF0ralPQN23fY/qrtCyuuCwCwhzLBfVjSlZK+HBFX\nSPqXpE/u7GS7a3vd9vrm5uaUywQAbCkT3KclnY6I20b7N6gI8m0iohcR7YhoN5vNadYIAHiKscEd\nEX+R9GfbLx41vUnS3ZVWBQDYU9mrSj4mqT+6ouQBSddUVxIA4HxKXccdESdHyyAvj4h3R8Q/qi4M\nqK1+X2q1pKWlYtvvz7siLJiyM24AUhHS3a40HBb7g0GxL0mdzvzqwkLhlndgEqurZ0N7y3BYtAMz\nQnADk9jYmKwdqADBDUxieXmydqACBDcwibU1qbHjq3oajaId5+JEbiUIbmASnY7U60krK5JdbHs9\nTkzuZutE7mAgRZw9kUt475sjYuof2m63Y319feqfCyCRVqsI651WVqRTp2ZdTe3ZPhER7TJ9mXED\nqAYncitDcAOoBidyK0NwA6gGJ3IrQ3ADqAYncivDLe8AqtPpENQVYMYNAMkQ3JgdbsYApoKlEswG\n36oHTA0zbswG36oHTA3BjdngZgxgaghuzAY3YwBTQ3BjNrgZA5gaghuzwc0YwNRwVQlmh5sxgKlg\nxg0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJAMwQ0AyRDcAJBMqS+Z\nsn1K0uOS/ivpyYhoV1kUAGBvk3w74Bsi4pHKKgEAlMJSCQAkUza4Q9LPbJ+w3a2yIADA+ZUN7tdF\nxOWS3ibpI7av2tnBdtf2uu31zc3NqRYJ1EK/L7Va0tJSse33510RFlSp4I6IB0fbhyXdKOnYLn16\nEdGOiHaz2ZxulcC89ftStysNBlJEse12CW/Mxdjgtn2h7Yu2Xkt6i6Q7qy4MqJXVVWk43N42HBbt\nwIyVuarkuZJutL3V/zsR8eNKqwLqZmNjsnagQmODOyIekPSKGdQC1NfycrE8sls7MGNcDgiUsbYm\nNRrb2xqNoh2YMYIbKKPTkXo9aWVFsottr1e0AzM2yZ2TwGLrdAhq1AIzbgBIhuAGgGQIbgBIhuAG\ngGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQI\nbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuDG9PT7Uqsl\nLS0V235/3hUBB9LheReAA6Lfl7pdaTgs9geDYl+SOp351QUcQMy4MR2rq2dDe8twWLQDmCqCG9Ox\nsTFZO4CnrXRw2z5k+w7bN1VZEOZoP2vUy8uTtQN42iaZcV8r6Z6qCsGcba1RDwZSxNk16rLhvbYm\nNRrb2xqNoh3AVJUKbtuXSnq7pK9WWw7mZr9r1J2O1OtJKyuSXWx7PU5MAhVwRIzvZN8g6fOSLpL0\niYh4xy59upK6krS8vPzKwWAw5VJRqaWlYqa9ky3973+zrwdYMLZPRES7TN+xM27b75D0cEScOF+/\niOhFRDsi2s1ms2SpqI06r1FzfTiwTZmlktdKeqftU5Kul/RG29+utCrMXl3XqPe79g4cQGODOyI+\nFRGXRkRL0nFJP4+I91VeGWarrmvUXB8OnIM7J3FWpzP/oN6J68OBc0x0A05E/GK3E5NAZeq89g7M\nCXdOot7quvYOzBHBjXqr69o7MEescaP+6rj2DswRM24ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBk\nCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgLoOH1QKoEb7WdZyth9VuPfdw62G1El81\nCmAumHGPw8NqAdQMwT0OD6sFUDME9zg8rBZAzRDc4/CwWgA1Q3CPw8NqAdQMV5WUwcNqAdQIM24A\nSIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASIbgBoBkCG4ASGZscNt+hu3f2P6d7btsf24WhQEA\ndlfmlvf/SHpjRJyxfUTSr2zfEhG/rrg2AMAuxgZ3RISkM6PdI6OfqLIoAMDeSq1x2z5k+6SkhyX9\nNCJu26VP1/a67fXNzc1p1wkAGCkV3BHx34i4XNKlko7ZftkufXoR0Y6IdrPZnHadAICRia4qiYh/\nSrpV0lurKQcAME6Zq0qati8evX6mpDdLurfqwgAAuytzVcklkr5p+5CKoP9uRNxUbVkAgL2Uuark\n95KumEEtAIASuHMSAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIbAJIhuAEgGYIb\nAJKpT3D3+1KrJS0tFdt+f94VAUAtlfl2wOr1+1K3Kw2Hxf5gUOxLUqczv7oAoIbqMeNeXT0b2luG\nw6IdALBNPYJ7Y2OydgBYYPUI7uXlydoBYIHVI7jX1qRGY3tbo1G0AwC2qUdwdzpSryetrEh2se31\nODEJALuox1UlUhHSBDUAjFWPGTcAoDSCGwCSIbgBIBmCGwCSIbgBIBlHxPQ/1N6UNJj6B591VNIj\nFX5+NozHuRiT7RiP7eo4HisR0SzTsZLgrprt9Yhoz7uOumA8zsWYbMd4bJd9PFgqAYBkCG4ASCZr\ncPfmXUDNMB7nYky2Yzy2Sz0eKde4AWCRZZ1xA8DCqm1w236r7fts32/7k7u8b9tfGr3/e9tXzqPO\nWSoxJq+3/ajtk6Ofz8yjzlmx/XXbD9u+c4/3F+oYKTEei3Z8vMD2rbbvtn2X7Wt36ZPzGImI2v1I\nOiTpT5JeJOkCSb+T9JIdfa6WdIskS3qVpNvmXXcNxuT1km6ad60zHJOrJF0p6c493l+0Y2TceCza\n8XGJpCtHry+S9MeDkiN1nXEfk3R/RDwQEU9Iul7Su3b0eZekb0Xh15Iutn3JrAudoTJjslAi4peS\n/n6eLgt1jJQYj4USEQ9FxO2j149LukfS83d0S3mM1DW4ny/pz0/ZP61zB7xMn4Ok7N/7mtF/+W6x\n/dLZlFZbi3aMlLGQx4ftlqQrJN22462Ux0h9HqSAabhd0nJEnLF9taQfSrpszjWhPhby+LD9LEnf\nl/TxiHhs3vVMQ11n3A9KesFT9i8dtU3a5yAZ+/dGxGMRcWb0+mZJR2wfnV2JtbNox8h5LeLxYfuI\nitDuR8QPdumS8hipa3D/VtJltl9o+wJJxyX9aEefH0n6wOis8KskPRoRD8260BkaOya2n2fbo9fH\nVPz7/m3mldbHoh0j57Vox8fob/2apHsi4gt7dEt5jNRyqSQinrT9UUk/UXE1xdcj4i7bHxq9/xVJ\nN6s4I3y/pKGka+ZV7yyUHJP3SPqw7Scl/VvS8RidOj+IbF+n4kqJo7ZPS/qspCPSYh4jJcZjoY4P\nSa+V9H5Jf7B9ctT2aUnLUu5jhDsnASCZui6VAAD2QHADQDIENwAkQ3ADQDIENwAkQ3ADQDIENwAk\nQ3ADQDL/B4GCafl34wjwAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADdhJREFUeJzt3X+M5Hddx/HXa29bYQqhpjdgbbs7NTFEbeBoJ5dDpEEq\npqJpE+0fZwa1JLiJgrT8Y8BLbDS5P0yM8VcimRQM6liQo5h6Qm0TisQ/PJgrV7hyhRzILq3VDggt\nMoZy9e0f31nvdtnd+Uw735l97z0fyWZmvvu9vfen3/a53/3OTNcRIQBAHgvzHgAAMBnCDQDJEG4A\nSIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgmcU6vuj+/fuj1WrV8aUBYE86efLk1yOiWbJvLeFu\ntVrq9/t1fGkA2JNsr5buy6USAEiGcANAMoQbAJIh3ACQDOEGgGSKwm37DtunbT9q+866hwKAVHo9\nqdWSFhaq216v1r9u7MsBbV8n6dclHZT0rKT7bR+PiLO1TgYAGfR60sqKNBxWj1dXq8eS1OnU8leW\nnHH/mKQTETGMiHOS/lnSL9YyDQBkc+TI+WivGw6r7TUpCfdpSa+3fYXthqQ3S7pm8062V2z3bfcH\ng8G05wSA3WltbbLtUzA23BFxRtIfSHpA0v2STkl6bov9uhHRjoh2s1n0rk0AyG9pabLtU1D05GRE\nvC8iboiIGyV9U9KXapsIADI5elRqNDZuazSq7TUpfVXJy0e3S6qub/9tbRMBQCadjtTtSsvLkl3d\ndru1PTEplf9Ppj5i+wpJ35P09oj4Vm0TAUA2nU6tod6sKNwR8fq6BwEAlOGdkwCQDOEGgGQINwAk\nQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCS\nIdwAkAzhBoBkCDcAJEO4ASAZwg0AyRBuAEiGcANAMoQbAJIpCrftd9l+1PZp2/fYflHdgwEAtjY2\n3LavkvROSe2IuE7SPkmH6x4MALC10ksli5JebHtRUkPSv9c3EgBgJ2PDHRFPSPpDSWuSnpT0dEQ8\nsHk/2yu2+7b7g8Fg+pMCACSVXSr5QUm3SrpW0g9Lusz2WzbvFxHdiGhHRLvZbE5/UgCApLJLJT8j\n6d8iYhAR35N0r6SfrHcsAMB2SsK9JumQ7YZtS7pJ0pl6xwIAbKfkGvcJScckPSzp86M/0615LgDA\nNhZLdoqIuyTdVfMsAIACvHMSAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHc\nAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCSIdwAkAzhBoBkCDcAJEO4ASAZwg0AyRBu\nAEhmbLhtv9L2qQs+nrF95yyGAwB8v7HhjogvRsSBiDgg6QZJQ0kfrX0yAFvr9aRWS1pYqG57vXlP\nhBlbnHD/myR9OSJW6xgGwBi9nrSyIg2H1ePV1eqxJHU685sLMzXpNe7Dku6pYxAABY4cOR/tdcNh\ntR0XjeJw275U0i2SPrzN51ds9233B4PBtOYDcKG1tcm2Y0+a5Iz75yQ9HBH/udUnI6IbEe2IaDeb\nzelMB2CjpaXJtmNPmiTcvywukwDzdfSo1Ghs3NZoVNtx0SgKt+3LJL1J0r31jgNgR52O1O1Ky8uS\nXd12uzwxeZEpelVJRHxH0hU1zwKgRKdDqC9yvHMSAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4A\nSIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCSIdwAkAzhBoBkCDcA\nJEO4ASAZwg0AyRBuAEiGcANAMkXhtn257WO2H7N9xvZr6x4MALC1xcL9/kTS/RFxm+1LJTVqnAkA\nsIOx4bb9Mkk3SrpdkiLiWUnP1jsWAGA7JZdKrpU0kPSXtj9r+27bl9U8FwBgGyXhXpR0vaS/iIjX\nSPqOpHdv3sn2iu2+7f5gMJjymACAdSXhflzS4xFxYvT4mKqQbxAR3YhoR0S72WxOc0YAwAXGhjsi\n/kPS12y/crTpJklfqHUqAMC2Sl9V8luSeqNXlHxF0lvrGwkAsJOicEfEKUntmmcBABTgnZMAkAzh\nBoBkCDcAJEO4ASAZwg0AyRBuAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZw\nA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCSWSzZyfZXJX1b0nOSzkVE\nu86hAADbm+SM+6cj4gDRvoj0elKrJS0sVLe93rwnAqDCM25chHo9aWVFGg6rx6ur1WNJ6nTmNxeA\n4jPukPSA7ZO2V+ocCLvEkSPno71uOKy2A5ir0jPun4qIJ2y/XNKDth+LiE9duMMo6CuStLS0NOUx\nMXNra5NtBzAzRWfcEfHE6PYpSR+VdHCLfboR0Y6IdrPZnO6UmL3tvvnyTRmYu7Hhtn2Z7Zeu35f0\ns5JO1z0Y5uzoUanR2Lit0ai2A5irkjPuV0j6F9uPSPq0pH+MiPvrHQtz1+lI3a60vCzZ1W23yxOT\nwC7giJj6F22329Hv96f+dQFgr7J9svTl1rxzEgCSIdwAkAzhBoBkCDcAJEO4ASAZwg0AyRBuAEiG\ncANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRD\nuAEgGcINAMkQbgBIhnADQDLF4ba9z/ZnbR+vcyAAwM4mOeO+Q9KZugYBAJQpCrftqyX9vKS76x0H\nADBO6Rn3H0v6bUn/W+MsAIACY8Nt+xckPRURJ8fst2K7b7s/GAymNiAAYKOSM+7XSbrF9lclfVDS\nG23/zeadIqIbEe2IaDebzSmPCQBYNzbcEfGeiLg6IlqSDkv6RES8pfbJAABb4nXcAJDM4iQ7R8Qn\nJX2ylkkAAEU44waAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCSIdwAkAzhBoBkCDcAJEO4ASAZ\nwg0AyRBuAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHcAJDM\n2HDbfpHtT9t+xPajtn9vFoMBALZWcsb9XUlvjIhXSzog6Wbbh6Y+Sa8ntVrSwkJ12+tN/a8AgL1g\ncdwOERGS/nv08JLRR0x1il5PWlmRhsPq8epq9ViSOp2p/lUAkF3RNW7b+2yfkvSUpAcj4sRUpzhy\n5Hy01w2H1XYAwAZF4Y6I5yLigKSrJR20fd3mfWyv2O7b7g8Gg8mmWFubbDsAXMQmelVJRHxL0kOS\nbt7ic92IaEdEu9lsTjbF0tJk2wHgIlbyqpKm7ctH918s6U2SHpvqFEePSo3Gxm2NRrUdALBByRn3\nlZIesv05SZ9RdY37+FSn6HSkbldaXpbs6rbb5YlJANiCqxeNTFe73Y5+vz/1rwsAe5XtkxHRLtmX\nd04CQDKEGwCSIdwAkAzhBoBkCDcAJFPLq0psDyStPs8/vl/S16c4zjztlbXslXVIrGU32ivrkF7Y\nWpYjoujdi7WE+4Ww3S99Scxut1fWslfWIbGW3WivrEOa3Vq4VAIAyRBuAEhmN4a7O+8BpmivrGWv\nrENiLbvRXlmHNKO17Lpr3ACAne3GM24AwA7mFm7bN9v+ou2ztt+9xed/wPaHRp8/Ybs1+ynHK1jH\n7bYHtk+NPt42jznHsf1+20/ZPr3N5237T0fr/Jzt62c9Y6mCtbzB9tMXHJPfnfWMpWxfY/sh218Y\n/bLuO7bYZ9cfm8J1pDguJb9AvfZ+RcTMPyTtk/RlST8i6VJJj0j68U37/Kak947uH5b0oXnMOoV1\n3C7pz+c9a8FabpR0vaTT23z+zZI+LsmSDkk6Me+ZX8Ba3iDp+LznLFzLlZKuH91/qaQvbfHv2K4/\nNoXrSHFcRv+cXzK6f4mkE5IObdqn1n7N64z7oKSzEfGViHhW0gcl3bppn1slfWB0/5ikm2x7hjOW\nKFlHChHxKUn/tcMut0r6q6j8q6TLbV85m+kmU7CWNCLiyYh4eHT/25LOSLpq0267/tgUriOF0T/n\ncb9AvdZ+zSvcV0n62gWPH9f3H8T/3ycizkl6WtIVM5muXMk6JOmXRj/CHrN9zWxGm7rStWbx2tGP\nuh+3/RPzHqbE6Mft16g6w7tQqmOzwzqkJMel4Beo19ovnpys3z9IakXEqyQ9qPPfhTE/D6t6e/Gr\nJf2ZpL+f8zxj2X6JpI9IujMinpn3PM/XmHWkOS5R8AvU6zSvcD8h6cIzz6tH27bcx/aipJdJ+sZM\npis3dh0R8Y2I+O7o4d2SbpjRbNNWcsxSiIhn1n/UjYiPSbrE9v45j7Ut25eoil0vIu7dYpcUx2bc\nOrIdF2nHX6Bea7/mFe7PSPpR29favlTVxfv7Nu1zn6RfG92/TdInYnSlfxcZu45N1xpvUXVtL6P7\nJP3q6BUMhyQ9HRFPznuo58P2D61fb7R9UNV/B7vtpEBS9YoRSe+TdCYi/mib3Xb9sSlZR5bj4rJf\noF5rvxan9YUmERHnbL9D0j+pemXG+yPiUdu/L6kfEfepOsh/bfusqieaDs9j1p0UruOdtm+RdE7V\nOm6f28A7sH2Pqmf199t+XNJdqp50UUS8V9LHVL164aykoaS3zmfS8QrWcpuk37B9TtL/SDq8C08K\n1r1O0q9I+vzomqok/Y6kJSnVsSlZR5bjcqWkD9jep+qby99FxPFZ9ot3TgJAMjw5CQDJEG4ASIZw\nA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgmf8DLFOFVWL3s2sAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6f6a508d68>"
+       "<matplotlib.figure.Figure at 0x7f83a86aec90>"
       ]
      },
      "metadata": {},
@@ -246,7 +461,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "plt.plot(x_data, y_data, 'or')\n",
+    "plt.plot([0, 1, 2, 3], [3, 5, 7, 9], 'or')\n",
     "plt.show()"
    ]
   },
