--- a/01-02-linear-regression.ipynb
+++ b/01-02-linear-regression.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 실습\n",
+    "# 코드\n",
     "\n",
     "\"**문제 1**\"을 프로그램으로 풀어봅니다.\n",
     "\n",
@@ -415,7 +415,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음을 프로그램으로 풀어봅니다.\n",
+    "# 실습\n",
+    "\n",
+    "다음을 프로그램으로 풀어봅시다.\n",
     "\n",
     "|**$x_1$**|**$x_2$**|**$x_3$**|**$y$**|\n",
     "|---|---|---|---|\n",
@@ -430,8 +432,19 @@
     "|1|1|0|8\n",
     "|1|1|1|9\n",
     "|1|2|0|11\n",
-    "|1|2|1|12"
+    "|1|2|1|12\n",
+    "|2|3|4|?\n",
+    "|5|6|7|?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
